--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.18",
     "@types/koa": "^2.0.49",
+    "@types/koa-router": "^7.0.42",
     "@types/node": "^12.7.2",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "koa": "^2.8.1",
+    "koa-router": "^7.4.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
