--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@types/koa": "^2.0.49",
     "@types/koa-router": "^7.0.42",
     "@types/node": "^12.7.2",
+    "@types/supertest": "^2.0.8",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "koa": "^2.8.1",
     "koa-router": "^7.4.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
+    "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.19.0",
     "tslint-config-airbnb": "^5.11.1",
